--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-h2 {
-    background-color: red;
+.h2 {
+    text-decoration-color: blue;
+}
+#h1 {
+text-decoration-color: chocolate;
+}
+.h3{
+    text-decoration-color: red;
+}
+#h4{
+    text-decoration-color: green;
+}
+.h5{
+    text-decoration-color: palegoldenrod;
 }
